@@ -183,6 +183,17 @@ typedef struct openfilestruct {
 } openfilestruct;
 #endif
 
+#ifndef NANO_SMALL
+typedef struct partition {
+    filestruct *fileage;
+    filestruct *top_prev;
+    char *top_data;
+    filestruct *filebot;
+    filestruct *bot_next;
+    char *bot_data;
+} partition;
+#endif
+
 typedef struct shortcut {
     /* Key values that aren't used should be set to NANO_NO_KEY. */
     int ctrlval;	/* Special sentinel key or control key we want
